# parallel

./: .gitignore  README.md
bspbench/: CMakeLists.txt  bspbench.c
common/: bspedupack.c  bspedupack.h
convex_hull/: CMakeLists.txt
convex_hull/src/: convex_hull.cpp  lcs_bsp.cpp  logging.h  normal_rbox.cpp  perf.h
convex_hull/test/: problem.ini  problem2.ini  problem3.ini  problem4.ini  problem64.ini  problem64_2.ini  problem64_3.ini  problem64_4.ini  problemS.ini  qhull_tests.cpp  tests.py
docs/reports/2014.09.25/: bsp.csv  graphDraw.R  graphDrawSeq.R  report2014.09.25.tex  seq.csv
docs/reports/2015.01.14/: ch_times.csv  ch_times_2.csv  pretty_graph.R  report.tex
dotProd/: CMakeLists.txt  inprod.c
hello/: CMakeLists.txt  hello.cpp
lcs/: lcs.cpp
lcs/lcs-bsp/: CMakeLists.txt  lcs_bsp.cpp
lcs/lcs-seq/: CMakeLists.txt  lcs.cpp  lcs_seq.cpp
lu/: CMakeLists.txt  lu.c
tools/: callgrind_to_png.sh
